# wsb-etf

./: .gitignore  README.md
wsb-etf-api/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
wsb-etf-api/src/: benchmarks.ts  db.ts  index.ts  migrate.ts  subreddits.ts  types.ts
wsb-etf-api/src/middleware/: errorHandler.ts  subreddit.ts
wsb-etf-api/src/routes/: benchmark.ts  changelog.ts  composition.ts  priceHistory.ts  subreddits.ts  sync.ts
wsb-etf-dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
wsb-etf-dashboard/src/: App.tsx  index.css  main.tsx
wsb-etf-dashboard/src/api/: client.ts
wsb-etf-dashboard/src/components/: About.tsx  Changelog.tsx  Composition.tsx  KpiStrip.tsx  PortfolioInsight.tsx  PriceChart.tsx  ReferenceRail.tsx  TimeRangeFilter.tsx
wsb-etf-dashboard/src/components/ui/: badge.tsx  card.tsx  table.tsx
wsb-etf-dashboard/src/context/: SubredditContext.tsx
wsb-etf-dashboard/src/lib/: benchmarkReturns.ts  benchmarks.ts  subreddits.ts  timeRange.ts
wsb-etf-sentinel/: .env.example  pyproject.toml  requirements.txt  run-parallel-backfills.sh
wsb-etf-sentinel/src/: analyzer.py  backfill.py  calculator.py  config.py  db.py  main.py  nav_tracker.py  scraper.py  sync_server.py
